--- a/src/pages/user-details/user-details.scss
+++ b/src/pages/user-details/user-details.scss
@@ -42,13 +42,40 @@ page-user-details {
             margin: 10px 0 2px 0;
             font-size: 1.4em;
         }
-        img{
-            border: 4px solid $secondary;
-            padding: 2px;
-            width: 100px;
-            height: 100px;
-            margin: 20px 0 10px 0;
-            border-radius: 100%;
+        .profile-image {
+            .imagex {
+                margin: 0 auto;
+                width: fit-content;
+                position: relative;
+                .image{
+                    border: 4px solid #f4f4f4;
+                    padding: 2px;
+                    width: 100px;
+                    height: 100px;
+                    margin: 20px 0 10px 0;
+                    border-radius: 100%;
+                }
+
+                .ratings {
+                    position: absolute;
+                    top: 31px;
+                    left: 76px;
+                    width: 40px;
+                    height: 40px;
+                    padding: 3px 0 0 3px;
+                    text-align: center;
+                    font-weight: .9em;
+                    line-height: 1;
+                    vertical-align: middle;
+                    border-radius: 50%;
+                    background-color: $primary;
+                    border: 2px solid $white;
+                    color: $white;
+                    .fa.fa-star {
+                        font-size: .8em;
+                    }
+                }
+            }
         }
         .distance, .status {
             position: absolute;
